--- a/static/homepage.html
+++ b/static/homepage.html
@@ -11,7 +11,7 @@
 
 	<!-- Corresponding CSS File -->
 	<link href="css/top_nav_bar.css" rel="stylesheet"/>
-	<link href="css/responsive-calendar.css" rel="stylesheet"/>
+	<link href="css/responsive-calendar.css" rel="stylesheet" media="screen"/>
 	<link href="css/homepage.css" rel="stylesheet"/>
 
 	<!-- Font -->
@@ -206,10 +206,28 @@
 		    $(".responsive-calendar").responsiveCalendar({
 				time: '2016-11',
 				events: {
-					"2016-11-05": {"number": 1, "url": "my_meetups.html"}
+					"2016-11-05": {
+						"number": 1,
+						"dayEvents": [{
+							"name": "Important",
+							"hour": "4"
+						}]
+					}
 				}
 		    });
 		});
 	</script>
+
+	<!-- Actions to Occur When Active Day Is Clicked -->
+	<script>
+	$(document).ready(function() {
+	  $('.responsive-calendar').responsiveCalendar({
+	    onActiveDayClick: function(events) {
+	    	$(this).popover();
+	    }
+	  });
+	});
+	</script>
+
 </body>
 </html>
