--- a/static/homepage.html
+++ b/static/homepage.html
@@ -200,26 +200,12 @@
 		});
 	</script>
 
-	<!-- Adds Events -->
+	<!-- Initialize Responsive Calendar -->
 	<script>
-		$(document).ready(function () {
-		    $(".responsive-calendar").responsiveCalendar({
-			    time: '2016-11',
-			    events: {
-			      "2016-11-09": {
-			        "number": 1
-			      }
-			    }
-		    });
+		$( document ).ready( function() {
+			$('.responsive-calendar').responsiveCalendar();
 		});
-
-
-		$(document).ready(function () {
-			var date = "2016-11-06";
-			$('.responsive-calendar').responsiveCalendar('edit', {
-	        	date: {"number": 1}
-	        });
-        });
 	</script>
+
 </body>
 </html>
