--- a/static/login.html
+++ b/static/login.html
@@ -36,22 +36,22 @@
 
       <div class="form-group">
         <label class="control-label col-sm-offset-2 col-sm-2 leftText" for="pwd">Password:</label>
-        <div class="col-sm-5"> 
+        <div class="col-sm-5">
           <input type="password" class="form-control" id="pwd" placeholder="Enter password">
         </div>
       </div>
 
-      <div class="form-group"> 
+      <div class="form-group">
         <div class="col-sm-offset-4 col-sm-5">
           <input id="login" class="btn btn-primary btn-block" value="Login" type="button" onclick="loginToHome()" disabled>
         </div>
       </div>
-
-      <div class="form-group"> 
+<!--
+      <div class="form-group">
         <div class="col-sm-offset-4 col-sm-5">
           <input id="signup" class="btn btn-primary btn-block" value="Sign Up" type="button" onclick="register()">
         </div>
-      </div>
+      </div> -->
     </form>
   </div>
 
